@@ -26,6 +26,7 @@ enum {
 	HXQUOTE_LDAPRDN,
 	HXQUOTE_BASE64,
 	HXQUOTE_URIENC,
+	HXQUOTE_SQLSQUOTE,
 	_HXQUOTE_MAX,
 };
 
